--- a/index.html
+++ b/index.html
@@ -5,6 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Anshul Mahajan — 3D Product Video Specialist & Motion Designer">
     <title>Anshul Mahajan | Portfolio</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to the new CSS file -->
+</head>
+<body>
+    <header>
+        <h1>Anshul Mahajan</h1>
+        <p>3D Product Video Specialist | Motion Designer</p>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#resume">Resume</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I'm a 3D product video specialist with a passion for creating visually striking, high-impact visual content using Blender, Cinema 4D, Unreal Engine and more. I work at Takila Designs, creating short 15–45 sec 3D ads and cinematic stills that focus on lighting, realism and product storytelling.</p>
+    </section>
+
+    <section id="portfolio" class="projects">
+        <div class="project-card">
+            <img src="project-thumbnail-1.jpg" alt="Project 1">
+            <h3>Project Title 1</h3>
+            <p>Short description of Project 1.</p>
+            <a href="https://www.behance.net/gallery/project-link-1" target="_blank">View Project</a>
+        </div>
+
+        <div class="project-card">
+            <img src="project-thumbnail-2.jpg" alt="Project 2">
+            <h3>Project Title 2</h3>
+            <p>Short description of Project 2.</p>
+            <a href="https://www.behance.net/gallery/project-link-2" target="_blank">View Project</a>
+        </div>
+
+        <!-- Repeat for all your projects -->
+    </section>
+
+    <section id="resume">
+        <h2>Resume</h2>
+        <a href="Anshul.pdf" class="download-btn" download>Download My Resume</a>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email me: <a href="mailto:anshulmahajan752@gmail.com">anshulmahajan752@gmail.com</a></p>
+        <p>
+            <a href="https://www.linkedin.com/in/anshul-mahajan-">LinkedIn</a> |
+            <a href="https://www.behance.net/anshul_mahajan">Behance</a> |
+            <a href="https://www.instagram.com/anshul_3d/">Instagram</a>
+        </p>
+    </section>
+
+    <footer>
+        &copy; 2025 Anshul Mahajan. All rights reserved.
+    </footer>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Anshul Mahajan — 3D Product Video Specialist & Motion Designer">
+    <title>Anshul Mahajan | Portfolio</title>
     <style>
         body { margin: 0; font-family: Arial, sans-serif; background-color: #0e0e0e; color: #e2e2e2; }
         header { padding: 20px; text-align: center; background: #161616; border-bottom: 1px solid #2a2a2a; }
