--- a/index.html
+++ b/index.html
@@ -1,65 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Anshul Mahajan — 3D Product Video Specialist & Motion Designer">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Anshul Mahajan — 3D Product Video Specialist & Motion Designer"/>
     <title>Anshul Mahajan | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
-        <div class="header-content">
-            <h1>Anshul Mahajan</h1>
-            <p>3D Product Video Specialist & Motion Designer</p>
-            <nav>
-                <a href="#work">Work</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </div>
+        <h1>Anshul Mahajan</h1>
+        <p>3D Product Video Specialist | Motion Designer</p>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#resume">Resume</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
-
-    <section id="hero">
-        <h2>Transforming Products Into Stunning Visual Stories</h2>
-        <p>Specializing in 3D Product Videos & Cinematic Stills.</p>
-    </section>
-
-    <section id="work">
-        <h2>My Projects</h2>
-        <div class="project-grid">
-            <a href="https://www.behance.net/anshul_mahajan" target="_blank" class="project-card">
-                <img src="your-project-image1.jpg" alt="Project 1">
-                <h3>Project Title</h3>
-                <p>Short description of your project.</p>
-            </a>
-            <a href="https://www.behance.net/anshul_mahajan" target="_blank" class="project-card">
-                <img src="your-project-image2.jpg" alt="Project 2">
-                <h3>Project Title</h3>
-                <p>Short description of your project.</p>
-            </a>
-            <!-- Add more projects as needed -->
-        </div>
-    </section>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I'm a 3D product video specialist with a passion for striking, realistic product visuals. I craft short ad films & still renders using Blender, Cinema 4D, Unreal Engine and more.</p>
+        <p>I'm a 3D product video specialist with a passion for crafting striking, cinematic short ads using Blender, Cinema 4D, Unreal Engine, and more. At Takila Designs, I bring products to life through storytelling and photoreal lighting.</p>
+    </section>
+
+    <section id="portfolio">
+        <h2>My Projects</h2>
+        <div class="projects-grid">
+
+            <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank" class="project-card">
+                <img src="Pebble_Neo.gif" alt="Pebble Neo">
+                <h3>Pebble Neo</h3>
+                <p>Redefining Everyday Elegance.</p>
+            </a>
+
+            <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank" class="project-card">
+                <img src="Lava_O3.gif" alt="Lava O3">
+                <h3>Lava O3</h3>
+                <p>Redefining Performance and Style.</p>
+            </a>
+
+            <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank" class="project-card">
+                <img src="Casio.png" alt="Casio">
+                <h3>Casio</h3>
+                <p>Classic meets contemporary watch design.</p>
+            </a>
+
+            <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank" class="project-card">
+                <img src="Lava_Prowatch.gif" alt="Lava Prowatch X">
+                <h3>Lava Prowatch X</h3>
+                <p>Smart design, smart future.</p>
+            </a>
+
+            <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank" class="project-card">
+                <img src="ProBuds.jpg" alt="Lava ProBuds">
+                <h3>Lava ProBuds</h3>
+                <p>Immersive sound — 3D visual storytelling.</p>
+            </a>
+
+            <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank" class="project-card">
+                <img src="Vast.png" alt="VAST">
+                <h3>VAST</h3>
+                <p>Journey to the Cosmos.</p>
+            </a>
+
+        </div>
+    </section>
+
+    <section id="resume">
+        <h2>Resume</h2>
+        <a href="Anshul.pdf" class="download-btn" download>Download My Resume</a>
     </section>
 
     <section id="contact">
-        <h2>Let’s Connect</h2>
+        <h2>Contact</h2>
         <p>Email: <a href="mailto:anshulmahajan752@gmail.com">anshulmahajan752@gmail.com</a></p>
         <p>
             <a href="https://www.linkedin.com/in/anshul-mahajan-" target="_blank">LinkedIn</a> |
             <a href="https://www.behance.net/anshul_mahajan" target="_blank">Behance</a> |
             <a href="https://www.instagram.com/anshul_3d/" target="_blank">Instagram</a>
         </p>
-        <a href="Anshul.pdf" class="download-btn" download>Download Resume</a>
     </section>
 
     <footer>
-        &copy; 2025 Anshul Mahajan.
+        &copy; 2025 Anshul Mahajan. All rights reserved.
     </footer>
 </body>
 </html>
