--- a/index.html
+++ b/index.html
@@ -1,69 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="Anshul Mahajan — 3D Product Video Specialist & Motion Designer"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Anshul Mahajan — 3D Product Video Specialist & Motion Designer">
     <title>Anshul Mahajan | Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Anshul Mahajan</h1>
-        <p>3D Product Video Specialist | Motion Designer</p>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#resume">Resume</a>
-            <a href="#contact">Contact</a>
-        </nav>
+        <div class="header-content">
+            <h1>Anshul Mahajan</h1>
+            <p>3D Product Video Specialist | Motion Designer</p>
+            <nav>
+                <a href="#about">About</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#resume">Resume</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
     </header>
 
     <section id="about">
-        <h2>About Me</h2>
-        <p>I'm a 3D product video specialist with a passion for crafting striking, cinematic short ads using Blender, Cinema 4D, Unreal Engine, and more. At Takila Designs, I bring products to life through storytelling and photoreal lighting.</p>
+        <div class="container">
+            <h2>About Me</h2>
+            <p>
+                I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools. I specialize in crafting cinematic 3D product advertisements and visual storytelling.
+            </p>
+            <p>
+                As part of Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism. My aim is to produce visual content that is not only beautiful but also deeply engaging.
+            </p>
+            <p>
+                With a dedication to pushing creative boundaries, I bring complex concepts to life through engaging visual narratives.
+            </p>
+        </div>
     </section>
 
     <section id="portfolio">
-        <h2>My Projects</h2>
-        <div class="projects-grid">
-
-            <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank" class="project-card">
-                <img src="Pebble_Neo.gif" alt="Pebble Neo">
+        <h2>Portfolio</h2>
+        <div class="portfolio">
+            <!-- Project 1 -->
+            <div class="project-card">
+                <img src="Pebble_Neo.gif" alt="Pebble Neo" />
                 <h3>Pebble Neo</h3>
-                <p>Redefining Everyday Elegance.</p>
-            </a>
+                <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">View Project</a>
+            </div>
 
-            <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank" class="project-card">
-                <img src="Lava_O3.gif" alt="Lava O3">
+            <!-- Project 2 -->
+            <div class="project-card">
+                <img src="Lava_O3.gif" alt="Lava O3" />
                 <h3>Lava O3</h3>
-                <p>Redefining Performance and Style.</p>
-            </a>
+                <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">View Project</a>
+            </div>
 
-            <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank" class="project-card">
-                <img src="Casio.png" alt="Casio">
+            <!-- Project 3 -->
+            <div class="project-card">
+                <img src="Casio.png" alt="Casio" />
                 <h3>Casio</h3>
-                <p>Classic meets contemporary watch design.</p>
-            </a>
+                <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">View Project</a>
+            </div>
 
-            <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank" class="project-card">
-                <img src="Lava_Prowatch.gif" alt="Lava Prowatch X">
+            <!-- Project 4 -->
+            <div class="project-card">
+                <img src="Lava_Prowatch.gif" alt="Lava Prowatch" />
                 <h3>Lava Prowatch X</h3>
-                <p>Smart design, smart future.</p>
-            </a>
+                <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">View Project</a>
+            </div>
 
-            <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank" class="project-card">
-                <img src="ProBuds.jpg" alt="Lava ProBuds">
+            <!-- Project 5 -->
+            <div class="project-card">
+                <img src="ProBuds.jpg" alt="Lava ProBuds" />
                 <h3>Lava ProBuds</h3>
-                <p>Immersive sound — 3D visual storytelling.</p>
-            </a>
+                <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">View Project</a>
+            </div>
 
-            <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank" class="project-card">
-                <img src="Vast.png" alt="VAST">
-                <h3>VAST</h3>
-                <p>Journey to the Cosmos.</p>
-            </a>
-
+            <!-- Project 6 -->
+            <div class="project-card">
+                <img src="Vast.png" alt="Vast" />
+                <h3>Vast</h3>
+                <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">View Project</a>
+            </div>
         </div>
     </section>
 
@@ -74,11 +90,14 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:anshulmahajan752@gmail.com">anshulmahajan752@gmail.com</a></p>
+        <div class="email-layout">
+            <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
+            <p><a href="mailto:anshulmahajan752@gmail.com">Send me an Email</a></p>
+        </div>
         <p>
-            <a href="https://www.linkedin.com/in/anshul-mahajan-" target="_blank">LinkedIn</a> |
-            <a href="https://www.behance.net/anshul_mahajan" target="_blank">Behance</a> |
-            <a href="https://www.instagram.com/anshul_3d/" target="_blank">Instagram</a>
+            <a href="https://www.linkedin.com/in/anshul-mahajan-" class="social-link">LinkedIn</a> |
+            <a href="https://www.behance.net/anshul_mahajan" class="social-link">Behance</a> |
+            <a href="https://www.instagram.com/anshul_3d/" class="social-link">Instagram</a>
         </p>
     </section>
 
