--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Anshul Mahajan — 3D Product Video Specialist & Motion Designer">
     <title>Anshul Mahajan | Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@300;500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Apple-like Top Banner -->
+    <div class="top-banner">
+        <p>Explore the Latest in 3D Product Videos | <a href="https://www.behance.net/anshul_mahajan" target="_blank">View Projects</a> | <a href="mailto:anshulmahajan752@gmail.com">Contact Me</a></p>
+    </div>
+
     <header>
         <div class="header-content">
             <h1>Anshul Mahajan</h1>
@@ -28,55 +34,52 @@
                 I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools. I specialize in crafting cinematic 3D product advertisements and visual storytelling.
             </p>
             <p>
-                As part of Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism. My aim is to produce visual content that is not only beautiful but also deeply engaging.
-            </p>
-            <p>
-                With a dedication to pushing creative boundaries, I bring complex concepts to life through engaging visual narratives.
+                As part of Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism.
             </p>
         </div>
     </section>
 
     <section id="portfolio">
         <h2>Portfolio</h2>
-        <div class="portfolio">
+        <div class="projects-container">
             <!-- Project 1 -->
             <div class="project-card">
-                <img src="Pebble_Neo.gif" alt="Pebble Neo" />
+                <img src="Pebble_Neo.gif" alt="Pebble Neo">
                 <h3>Pebble Neo</h3>
                 <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">View Project</a>
             </div>
 
             <!-- Project 2 -->
             <div class="project-card">
-                <img src="Lava_O3.gif" alt="Lava O3" />
+                <img src="Lava_O3.gif" alt="Lava O3">
                 <h3>Lava O3</h3>
                 <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">View Project</a>
             </div>
 
             <!-- Project 3 -->
             <div class="project-card">
-                <img src="Casio.png" alt="Casio" />
+                <img src="Casio.png" alt="Casio">
                 <h3>Casio</h3>
                 <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">View Project</a>
             </div>
 
             <!-- Project 4 -->
             <div class="project-card">
-                <img src="Lava_Prowatch.gif" alt="Lava Prowatch" />
+                <img src="Lava_Prowatch.gif" alt="Lava Prowatch X">
                 <h3>Lava Prowatch X</h3>
                 <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">View Project</a>
             </div>
 
             <!-- Project 5 -->
             <div class="project-card">
-                <img src="ProBuds.jpg" alt="Lava ProBuds" />
+                <img src="ProBuds.jpg" alt="Lava ProBuds">
                 <h3>Lava ProBuds</h3>
                 <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">View Project</a>
             </div>
 
             <!-- Project 6 -->
             <div class="project-card">
-                <img src="Vast.png" alt="Vast" />
+                <img src="Vast.png" alt="Vast">
                 <h3>Vast</h3>
                 <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">View Project</a>
             </div>
@@ -90,15 +93,14 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <div class="email-layout">
-            <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
-            <p><a href="mailto:anshulmahajan752@gmail.com">Send me an Email</a></p>
+        <div class="contact-info">
+            <p>Email me: <a href="mailto:anshulmahajan752@gmail.com">anshulmahajan752@gmail.com</a></p>
+            <p>Connect with me: 
+                <a href="https://www.linkedin.com/in/anshul-mahajan-">LinkedIn</a> | 
+                <a href="https://www.behance.net/anshul_mahajan">Behance</a> | 
+                <a href="https://www.instagram.com/anshul_3d/">Instagram</a>
+            </p>
         </div>
-        <p>
-            <a href="https://www.linkedin.com/in/anshul-mahajan-" class="social-link">LinkedIn</a> |
-            <a href="https://www.behance.net/anshul_mahajan" class="social-link">Behance</a> |
-            <a href="https://www.instagram.com/anshul_3d/" class="social-link">Instagram</a>
-        </p>
     </section>
 
     <footer>
