--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav>
                 <a href="#about">About</a>
                 <a href="#portfolio">Portfolio</a>
-                <a href="#resume">Resume</a>
+                <a href="#latest-project">Latest Project</a>
                 <a href="#contact">Contact</a>
             </nav>
         </div>
@@ -36,6 +36,16 @@
             <p>
                 As part of Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism.
             </p>
+        </div>
+    </section>
+
+    <!-- Latest Project Section with Behance Integration -->
+    <section id="latest-project">
+        <h2>Latest Project</h2>
+        <div class="latest-project-card">
+            <img src="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" alt="Latest Project">
+            <h3>Pebble Neo</h3>
+            <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">View Project</a>
         </div>
     </section>
 
@@ -86,11 +96,6 @@
         </div>
     </section>
 
-    <section id="resume">
-        <h2>Resume</h2>
-        <a href="Anshul.pdf" class="download-btn" download>Download My Resume</a>
-    </section>
-
     <section id="contact">
         <h2>Contact</h2>
         <div class="contact-info">
@@ -101,6 +106,11 @@
                 <a href="https://www.instagram.com/anshul_3d/">Instagram</a>
             </p>
         </div>
+    </section>
+
+    <section id="resume">
+        <h2>Resume</h2>
+        <a href="Anshul.pdf" class="download-btn" download>Download My Resume</a>
     </section>
 
     <footer>
