--- a/index.html
+++ b/index.html
@@ -9,112 +9,110 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Apple-like Top Banner -->
-    <div class="top-banner">
-        <p>Explore the Latest in 3D Product Videos | <a href="https://www.behance.net/anshul_mahajan" target="_blank">View Projects</a> | <a href="mailto:anshulmahajan752@gmail.com">Contact Me</a></p>
+
+<header>
+    <div class="header-content">
+        <h1>Anshul Mahajan</h1>
+        <p>3D Product Video Specialist | Motion Designer</p>
+        <nav>
+            <a href="#projects">Projects</a>
+            <a href="#about">About</a>
+            <a href="#latest-project">Latest Project</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </div>
+</header>
 
-    <header>
-        <div class="header-content">
-            <h1>Anshul Mahajan</h1>
-            <p>3D Product Video Specialist | Motion Designer</p>
-            <nav>
-                <a href="#about">About</a>
-                <a href="#portfolio">Portfolio</a>
-                <a href="#latest-project">Latest Project</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </div>
-    </header>
-
-    <section id="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>
-                I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools. I specialize in crafting cinematic 3D product advertisements and visual storytelling.
-            </p>
-            <p>
-                As part of Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism.
-            </p>
-        </div>
-    </section>
-
-    <!-- Latest Project Section with Behance Integration -->
-    <section id="latest-project">
-        <h2>Latest Project</h2>
-        <div class="latest-project-card">
-            <img src="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" alt="Latest Project">
+<section id="projects">
+    <h2>Portfolio</h2>
+    <div class="projects-container">
+        <!-- Project 1 -->
+        <div class="project-card">
+            <img src="Pebble_Neo.gif" alt="Pebble Neo">
             <h3>Pebble Neo</h3>
             <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">View Project</a>
         </div>
-    </section>
 
-    <section id="portfolio">
-        <h2>Portfolio</h2>
-        <div class="projects-container">
-            <!-- Project 1 -->
-            <div class="project-card">
-                <img src="Pebble_Neo.gif" alt="Pebble Neo">
-                <h3>Pebble Neo</h3>
-                <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">View Project</a>
-            </div>
-
-            <!-- Project 2 -->
-            <div class="project-card">
-                <img src="Lava_O3.gif" alt="Lava O3">
-                <h3>Lava O3</h3>
-                <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">View Project</a>
-            </div>
-
-            <!-- Project 3 -->
-            <div class="project-card">
-                <img src="Casio.png" alt="Casio">
-                <h3>Casio</h3>
-                <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">View Project</a>
-            </div>
-
-            <!-- Project 4 -->
-            <div class="project-card">
-                <img src="Lava_Prowatch.gif" alt="Lava Prowatch X">
-                <h3>Lava Prowatch X</h3>
-                <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">View Project</a>
-            </div>
-
-            <!-- Project 5 -->
-            <div class="project-card">
-                <img src="ProBuds.jpg" alt="Lava ProBuds">
-                <h3>Lava ProBuds</h3>
-                <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">View Project</a>
-            </div>
-
-            <!-- Project 6 -->
-            <div class="project-card">
-                <img src="Vast.png" alt="Vast">
-                <h3>Vast</h3>
-                <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">View Project</a>
-            </div>
+        <!-- Project 2 -->
+        <div class="project-card">
+            <img src="Lava_O3.gif" alt="Lava O3">
+            <h3>Lava O3</h3>
+            <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">View Project</a>
         </div>
-    </section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <div class="contact-info">
-            <p>Email me: <a href="mailto:anshulmahajan752@gmail.com">anshulmahajan752@gmail.com</a></p>
-            <p>Connect with me: 
-                <a href="https://www.linkedin.com/in/anshul-mahajan-">LinkedIn</a> | 
-                <a href="https://www.behance.net/anshul_mahajan">Behance</a> | 
-                <a href="https://www.instagram.com/anshul_3d/">Instagram</a>
-            </p>
+        <!-- Project 3 -->
+        <div class="project-card">
+            <img src="Casio.png" alt="Casio">
+            <h3>Casio</h3>
+            <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">View Project</a>
         </div>
-    </section>
 
-    <section id="resume">
-        <h2>Resume</h2>
-        <a href="Anshul.pdf" class="download-btn" download>Download My Resume</a>
-    </section>
+        <!-- Project 4 -->
+        <div class="project-card">
+            <img src="Lava_Prowatch.gif" alt="Lava Prowatch X">
+            <h3>Lava Prowatch X</h3>
+            <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">View Project</a>
+        </div>
 
-    <footer>
-        &copy; 2025 Anshul Mahajan. All rights reserved.
-    </footer>
+        <!-- Project 5 -->
+        <div class="project-card">
+            <img src="ProBuds.jpg" alt="Lava ProBuds">
+            <h3>Lava ProBuds</h3>
+            <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">View Project</a>
+        </div>
+
+        <!-- Project 6 -->
+        <div class="project-card">
+            <img src="Vast.png" alt="Vast">
+            <h3>Vast</h3>
+            <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">View Project</a>
+        </div>
+    </div>
+</section>
+
+<section id="about">
+    <div class="container">
+        <h2>About Me</h2>
+        <p>
+            I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools. I specialize in crafting cinematic 3D product advertisements and visual storytelling.
+        </p>
+        <p>
+            As part of Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism.
+        </p>
+    </div>
+</section>
+
+<!-- Latest Project Section with Behance Integration -->
+<section id="latest-project">
+    <h2>Latest Project</h2>
+    <div class="latest-project-card">
+        <img src="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" alt="Latest Project">
+        <h3>Pebble Neo</h3>
+        <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">View Project</a>
+    </div>
+</section>
+
+<section id="contact">
+    <h2>Contact</h2>
+    <div class="contact-info">
+        <p>For collaboration or inquiries, feel free to reach out:</p>
+        <p>Email: <a href="mailto:anshulmahajan752@gmail.com">anshulmahajan752@gmail.com</a></p>
+        <p>Connect with me: 
+            <a href="https://www.linkedin.com/in/anshul-mahajan-">LinkedIn</a> | 
+            <a href="https://www.behance.net/anshul_mahajan">Behance</a> | 
+            <a href="https://www.instagram.com/anshul_3d/">Instagram</a>
+        </p>
+    </div>
+</section>
+
+<section id="resume">
+    <h2>Resume</h2>
+    <a href="Anshul.pdf" class="download-btn" download>Download My Resume</a>
+</section>
+
+<footer>
+    &copy; 2025 Anshul Mahajan. All rights reserved.
+</footer>
+
 </body>
 </html>
