--- a/index.html
+++ b/index.html
@@ -274,15 +274,16 @@
         </div>
     </section>
 
-    <!-- Latest Project Section -->
-    <section id="latest-project">
-        <h2>Latest Project</h2>
-        <div class="latest-project-card">
-            <iframe src="https://vimeo.com/1073498873" width="100%" height="500" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-            <h3>Royal Steel</h3>
-            <a href="https://www.behance.net/gallery/XYZ/Royal-Steel" target="_blank">View Project</a>
-        </div>
-    </section>
+   <!-- Latest Project Section -->
+<section id="latest-project">
+    <h2>Latest Project: Royal Steel</h2>
+    <div class="latest-project-card">
+        <iframe src="https://player.vimeo.com/video/1073498873?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; picture-in-picture" sandbox="allow-same-origin allow-scripts allow-pointer-lock allow-forms allow-popups"></iframe>
+        <h3>Royal Steel - Redefining Strength</h3>
+        <a href="https://www.behance.net/gallery/223203521/Pebble-Royal-Steel-Series" target="_blank">View on Behance</a>
+    </div>
+</section>
+
 
     <!-- Contact Section -->
     <section id="contact">
